--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
             <legend>Vilka ämnen skulle du vara intresserad av?</legend>
             
             <input type="checkbox" name="checkbox-1a" id="checkbox-1a" type="checkbox" value="A/B Testning">
-            <label for="checkbox-1a">AB-Testning <small>– Oktober</small></label>
+            <label for="checkbox-1a">A/B-Testning <small>– Oktober</small></label>
             
             <input type="checkbox" name="checkbox-2a" id="checkbox-2a" value="Web Psychology">
             <label for="checkbox-2a">Webbpsykologi <small>– Oktober</small></label>
