--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
         <h1>Kul att du också vill komma!</h1>
         <p>Vi hör av oss för att bekräfta din plats.</p>
         <!-- <button href="#main" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-b"><i class="fa fa-thumbs-o-up"></i> Tack!</button> -->
-        <a href="https://conversionista.se/blogg/" target="_self" class="ui-btn ui-shadow ui-corner-all ui-btn-b"><i class="fa fa-thumbs-o-up"></i> Få tips direkt från Sveriges största konverteringsblogg</a>
+        <a href="https://conversionista.se/blogg/" target="_blank" class="ui-btn ui-shadow ui-corner-all ui-btn-b"><i class="fa fa-thumbs-o-up"></i> Få tips direkt från Sveriges största konverteringsblogg</a>
         <div class="logo">
             <img src="images/logo-c_red.svg" />
         </div>
