--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
     <div data-role="page" data-dialog="true" id="tack">
       <div role="main" class="ui-content tack">
         <h1>Kul att du också är intresserad!</h1>
-        <p>Vi hör av oss för med datum för höstens seminarier.</p>
+        <p>Vi hör av oss med datum för höstens seminarier.</p>
         <button href="#main" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-b"><i class="fa fa-thumbs-o-up"></i> Tack!</button>
         <!-- <a href="https://conversionista.se/blogg/" target="_blank" class="ui-btn ui-shadow ui-corner-all ui-btn-b"><i class="fa fa-thumbs-o-up"></i> Få tips direkt från Sveriges största konverteringsblogg</a> -->
         <div class="logo">
