added 360 to form

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,9 @@
 
             <input type="checkbox" name="checkbox-5a" id="checkbox-5a" value="User Testing">
             <label for="checkbox-5a">User Testing & Eye Tracking</label>
+
+            <input type="checkbox" name="checkbox-6a" id="checkbox-6a" value="The 360 Suite inc. Optimize 360">
+            <label for="checkbox-6a">The 360 Suite inc. Optimize 360</label>
           </fieldset>
         </form>
         <button role="button" class="ui-shadow ui-btn ui-corner-all ui-btn-b" data-transition="flip" id="post" disabled="disabled">Anmäl intresse!</button>
